Setting document.title doesn't affect contents of title tag of XHTML documents https://bugs.webkit.org/show_bug.cgi?id=57537

Patch by Jacky Jiang <zhajiang@rim.com> on 2011-09-12
Reviewed by Alexey Proskuryakov.

Source/WebCore:

Update the contents of the <title> tag of XHTML documents when setting
document.title.

Test: fast/dom/title-content-set-innerText-get.xhtml

* dom/Document.cpp:
(WebCore::Document::setTitle):

LayoutTests:

* fast/dom/title-content-set-innerText-get-expected.txt: Added.
* fast/dom/title-content-set-innerText-get.xhtml: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@95009 bbb929c8-8fbe-4397-9dbb-9b2b20218538